Add expandable history row

--- a/src/pages/javascript/modules/import.meta.mdx
+++ b/src/pages/javascript/modules/import.meta.mdx
@@ -9,7 +9,7 @@ docs:
   Vite: https://vite.dev/guide/env-and-mode
   Webpack: https://webpack.js.org/api/module-variables/#importmeta
 ---
-import ExperimentalInline from '../../../components/ExperimentalInline.astro';
+import ExperimentalInline from '../../../components/ExperimentalInline.tsx';
 
 ## Syntax
 
